Fixed spacing issue at the bottom of sections

--- a/css/main.css
+++ b/css/main.css
@@ -102,6 +102,7 @@ hr {
 
 .section-white {
   background-color: #FFF;
+  padding-bottom: 25px;
 }
 
 .section-img {
@@ -116,7 +117,7 @@ hr {
 }
 
 article {
-  padding-bottom: 25px;
+  padding-bottom: 10px;
 }
 
 /*######################### 
@@ -428,7 +429,7 @@ Media Queries - Mobile
     right: 0; 
     bottom: 0; 
     margin: auto; 
-    min-width: 50%;g
+    min-width: 50%;
     min-height: 50%;
   }
 
